✨ add Shinobi server to manage video streams

--- a/playbooks/roles/10_video-server/templates/mediamtx.jinja
+++ b/playbooks/roles/10_video-server/templates/mediamtx.jinja
@@ -231,7 +231,7 @@ rtsp: yes
 rtspTransports: [tcp]
 # Encrypt handshakes and TCP streams with TLS (RTSPS).
 # Available values are "no", "strict", "optional".
-rtspEncryption: "strict"
+rtspEncryption: "optional"
 # Address of the TCP/RTSP listener. This is needed only when encryption is "no" or "optional".
 rtspAddress: :8554
 # Address of the TCP/TLS/RTSPS listener. This is needed only when encryption is "strict" or "optional".
